force-app/main/default/objects/Routing_Configuration__mdt/fields/Queue_Dispatcher__c.field-meta.xml
<CustomField>
    <fullName>Queue_Dispatcher__c</fullName>
    <label>Queue Dispatcher</label>
    <length>40</length>
    <type>Text</type>
</CustomField>