force-app/main/default/objects/Routing_Configuration__mdt/fields/Routing_Chinese__c.field-meta.xml
<CustomField>
    <fullName>Routing_Chinese__c</fullName>
    <label>Routing Chinese</label>
    <length>40</length>
    <type>Text</type>
</CustomField>