force-app/main/default/objects/Routing_Configuration__mdt/fields/Routing_French__c.field-meta.xml
<CustomField>
    <fullName>Routing_French__c</fullName>
    <label>Routing French</label>
    <length>40</length>
    <type>Text</type>
</CustomField>