force-app/main/default/objects/Routing_Configuration__mdt/fields/Routing_Italian__c.field-meta.xml
<CustomField>
    <fullName>Routing_Italian__c</fullName>
    <label>Routing Italian</label>
    <length>40</length>
    <type>Text</type>
</CustomField>